// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cfn-deploy should successfully update existing stack 1`] = `
Object {
  "TemplateBody": "Parameters:
  S3BucketName:
    Description: \\"S3 Bucket name\\"
    Type: String
  DummyParam:
    Description: \\"Dummy parameter\\"
    Type: String

Resources:
  HelloBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub \\"\${AWS::StackName}-\${S3BucketName}\\"
",
}
`;

exports[`cfn-deploy should successfully update existing stack 2`] = `
Object {
  "StackName": "existing-stack",
}
`;

exports[`cfn-deploy should successfully update existing stack 3`] = `
Object {
  "StackName": "existing-stack",
}
`;

exports[`cfn-deploy should successfully update existing stack 4`] = `
Object {
  "ChangeSetName": "fake-changeset-id",
}
`;

exports[`cfn-deploy should successfully update existing stack 5`] = `
Object {
  "StackName": "existing-stack",
}
`;

exports[`cfn-deploy should successfully update existing stack 6`] = `
Object {
  "Capabilities": undefined,
  "ChangeSetName": "cfn-deploy",
  "ChangeSetType": "UPDATE",
  "Description": "Created with cfn-deploy",
  "Parameters": Array [],
  "StackName": "existing-stack",
  "TemplateBody": "Parameters:
  S3BucketName:
    Description: \\"S3 Bucket name\\"
    Type: String
  DummyParam:
    Description: \\"Dummy parameter\\"
    Type: String

Resources:
  HelloBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub \\"\${AWS::StackName}-\${S3BucketName}\\"
",
}
`;

exports[`cfn-deploy should successfully update existing stack 7`] = `
Object {
  "ChangeSetName": "fake-changeset-id",
}
`;

exports[`cfn-deploy should successfully update existing stack 8`] = `
Object {
  "StackName": "existing-stack",
}
`;

exports[`cfn-deploy should successfully update existing stack 9`] = `
Object {
  "ChangeSetName": "fake-changeset-id",
}
`;

exports[`cfn-deploy should successfully update existing stack 10`] = `
Object {
  "StackName": "existing-stack",
}
`;

exports[`cfn-deploy should successfully update existing stack 11`] = `
Object {
  "type": "UPDATE",
}
`;
